--- a/playbooks/setup-mysql.yml
+++ b/playbooks/setup-mysql.yml
@@ -40,7 +40,10 @@
     - shell: mysql -srN -e "select count(*) from mysql.user where password = '' and user = 'root'"
       register: nopasswd_root_num
 
-    - shell: mysql -srN -e "SET PASSWORD FOR 'root'@'localhost' = PASSWORD('{{ db_password }}');"
+    - shell: mysql -srN -e "{{ item }}"
+      with_items:
+        - "update mysql.user set password = password('{{ db_password }}') where password = '' and user = 'root'"
+        - "flush privileges"
       when: nopasswd_root_num.stdout | int > 0
 
 #    - name: Securing the initial MySQL accounts
