--- a/playbooks/setup-mysql.yml
+++ b/playbooks/setup-mysql.yml
@@ -1,53 +1,9 @@
 ---
 
 - name: Setup MySQL
-  hosts: controller
-  user: root
-  tasks:
-    - name: Install MySQL
-      yum: name={{ item }} state=present
-      with_items:
-        - mariadb
-        - mariadb-server
-        # The Python MySQL library is compatible with MariaDB
-        - MySQL-python
-
-    - name: Setup MySQL configuration file /etc/my.cnf
-      ini_file: dest=/etc/my.cnf section=mysqld option={{ item.option }} value={{ item.value }} backup=yes
-      with_items:
-        - option: bind-address
-          value: "{{ ansible_default_ipv4.address }}"
-        - option: default-storage-engine
-          value: innodb
-        - option: innodb_file_per_table
-          value: 1
-        - option: collation-server
-          value: utf8_general_ci
-        - option: init-connect
-          value: "'SET NAMES utf8'"
-        - option: character-set-server
-          value: utf8
-
-#    - name: Enable and restart MySQL
-#      service: name=mariadb enabled=yes state=restarted
-
-    - shell: mysql -srN -e "select count(*) from mysql.user where user = ''"
-      register: anonym_num
-
-    - shell: mysql -srN -e "delete from mysql.user where user = ''"
-      when: anonym_num.stdout | int > 0
-
-    - shell: mysql -srN -e "select count(*) from mysql.user where password = '' and user = 'root'"
-      register: nopasswd_root_num
-
-    - shell: mysql -srN -e "{{ item }}"
-      with_items:
-        - "update mysql.user set password = password('{{ db_password }}') where password = '' and user = 'root'"
-        - "flush privileges"
-      when: nopasswd_root_num.stdout | int > 0
-
-#    - name: Securing the initial MySQL accounts
-
+  hosts: dbservers
+  roles:
+    - mysql
   vars_files:
     - vars/secrets.yml
 
