--- a/playbooks/upgrade-packages.yml
+++ b/playbooks/upgrade-packages.yml
@@ -6,12 +6,34 @@
   tasks:
     - name: Upgrade packages
       yum: name=* state=latest
+      when: upgrade is defined
 
     - name: Install packages
       yum: name={{ item }} state=latest
       with_items: install_packages
+      tags:
+        - tagged
+      when: upgrade is defined
 
   vars:
     install_packages:
       - rsync
       - git
+      - epel-release
+
+- name: Install and enable services on controller
+  hosts: controller
+
+  tasks:
+    - name: Install packages
+      yum: name={{ item }} state=present
+      with_items: install_packages
+
+    - service: name=memcached enabled=yes state=started
+
+  vars:
+    install_packages:
+      - httpd
+      - mod_wsgi
+      - memcached
+      - python-memcached
