--- a/playbooks/setup-keystone.yml
+++ b/playbooks/setup-keystone.yml
@@ -4,10 +4,27 @@
   hosts: controller
 
   tasks:
+    # - shell: python facts/get-requirements.py {{ source_dir }}/keystone
+    #   delegate_to: localhost
+    #   register: requirements
+
+    # - shell: ls {{ source_dir }}
+    #   delegate_to: localhost
+    #   register: repos
+
+    # - synchronize: src={{ source_dir }}/{{ item }} dest={{ deploy_dir }}
+    #   when: item in repos.stdout_lines
+    #   with_items: "{{ requirements.stdout_lines }}"
+    #   delegate_to: localhost
+
     - file: path={{ deploy_dir }} state=directory
 
     - synchronize: src={{ source_dir }}/keystone dest={{ deploy_dir }}
       delegate_to: localhost
+
+    - shell: pip install -r {{ deploy_dir }}/keystone/requirements.txt --no-allow-insecure
+
+    - shell: pip install -e {{ deploy_dir }}/keystone --no-allow-insecure
 
   vars_files:
     - vars/openstack.yml
