--- a/playbooks/install-facts.yml
+++ b/playbooks/install-facts.yml
@@ -7,6 +7,7 @@
   copy: src=facts/{{ item }} dest=/etc/ansible/facts.d mode="u=rwx"
   with_items:
     - dynamic.fact
+    - get-requirements.py
 
 - name: re-read facts after adding custom facts
   setup: filter=ansible_local
