--- a/playbooks/roles/mysql/tasks/openstack.yml
+++ b/playbooks/roles/mysql/tasks/openstack.yml
@@ -9,3 +9,9 @@
          -e "GRANT ALL PRIVILEGES ON keystone.* TO 'keystone'@'localhost' IDENTIFIED BY '{{ keystone_dbpass }}';"
          -e "GRANT ALL PRIVILEGES ON keystone.* TO 'keystone'@'%' IDENTIFIED BY '{{ keystone_dbpass }}';"
   when: "'keystone' not in databases.stdout"
+
+
+- shell: mysql -srN -p{{ db_password }} -e "CREATE DATABASE glance;"
+         -e "GRANT ALL PRIVILEGES ON glance.* TO 'glance'@'localhost' IDENTIFIED BY '{{ glance_dbpass }}';"
+         -e "GRANT ALL PRIVILEGES ON glance.* TO 'glance'@'%' IDENTIFIED BY '{{ glance_dbpass }}';"
+  when: "'glance' not in databases.stdout"
