--- a/playbooks/setup-glance.yml
+++ b/playbooks/setup-glance.yml
@@ -1,18 +1,18 @@
 ---
 
-- name: Setup keystone
+- name: Setup glance
   hosts: controller
 
   pre_tasks:
     - include: setup-users.yml
 
   roles:
-    - keystone
+    - glance
 
   vars_files:
     - vars/openstack.yml
     - vars/secrets.yml
 
   vars:
-    user_name: keystone
-    group_name: keystone
+    user_name: glance
+    group_name: glance
