--- a/playbooks/vars/openstack.yml
+++ b/playbooks/vars/openstack.yml
@@ -6,3 +6,12 @@ source_dir: /var/openstack-source
 
 version: 2015.1.0
 deploy_dir: /var/openstack-deploy
+
+keystone_admin_port: 35357
+keystone_service_port: 5000
+
+keystone_auth_url: http://controller:{{ keystone_admin_port }}
+keystone_auth_uri: http://controller:{{ keystone_service_port }}
+
+keystone_admin_url: keystone_auth_url/v2.0
+keystone_service_url: keystone_auth_uri/v2.0
