--- a/playbooks/roles/nova/defaults/main.yml
+++ b/playbooks/roles/nova/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-glance_service_port: 9292
+nova_service_port: 8774
 
-glance_admin_url: http://controller:{{ glance_service_port }}/v2.0
-glance_service_url: http://controller:{{ glance_service_port }}/v2.0
+nova_admin_url: http://controller:{{ nova_service_port }}/v2/%\(tenant_id\)s
+nova_service_url: http://controller:{{ nova_service_port }}/v2/%\(tenant_id\)s
