--- a/playbooks/roles/mysql/tasks/openstack.yml
+++ b/playbooks/roles/mysql/tasks/openstack.yml
@@ -15,3 +15,9 @@
          -e "GRANT ALL PRIVILEGES ON glance.* TO 'glance'@'localhost' IDENTIFIED BY '{{ glance_dbpass }}';"
          -e "GRANT ALL PRIVILEGES ON glance.* TO 'glance'@'%' IDENTIFIED BY '{{ glance_dbpass }}';"
   when: "'glance' not in databases.stdout"
+
+- shell: mysql -srN -p{{ db_password }} -e "CREATE DATABASE nova;"
+         -e "GRANT ALL PRIVILEGES ON nova.* TO 'nova'@'localhost' IDENTIFIED BY '{{ nova_dbpass }}';"
+         -e "GRANT ALL PRIVILEGES ON nova.* TO 'nova'@'%' IDENTIFIED BY '{{ nova_dbpass }}';"
+  when: "'nova' not in databases.stdout"
+
