--- a/playbooks/roles/nova/tasks/main.yml
+++ b/playbooks/roles/nova/tasks/main.yml
@@ -7,3 +7,42 @@
 
 - shell: pip install {{ item }} --no-allow-insecure
   with_lines: python /etc/ansible/facts.d/get-requirements.py {{ deploy_dir }}/nova
+
+- shell: pip install -e {{ deploy_dir }}/nova --no-allow-insecure
+
+- file: path={{ item }} state=directory owner={{ user_name }} group={{ group_name }}
+  with_items:
+    - /etc/nova
+    - /var/log/nova
+
+- copy: src={{ deploy_dir }}/glance/etc/{{ item }} dest=/etc/glance/{{ item.replace('.sample', '').replace('_sample', '') }}
+  with_items:
+    - glance-api.conf
+
+
+
+
+
+
+
+
+
+- include: command.yml
+  vars:
+    get_command: openstack user show nova
+    create_command: openstack user create --password {{ nova_password }} nova
+
+- include: command.yml
+  vars:
+    get_command: openstack user role list --project service nova
+    create_command: openstack role add --project service --user nova admin
+
+- include: command.yml
+  vars:
+    get_command: openstack service show nova
+    create_command: openstack service create --name nova --description "OpenStack Compute" compute
+
+- include: command.yml
+  vars:
+    get_command: openstack endpoint show compute
+    create_command: openstack endpoint create --publicurl "{{ nova_service_url }}" --adminurl "{{ nova_admin_url }}" --internalurl "{{ nova_service_url }}" --region RegionOne compute
