--- a/playbooks/vars/secrets.yml
+++ b/playbooks/vars/secrets.yml
@@ -7,9 +7,11 @@ rabbitmq_password: 2014
 
 keystone_dbpass: 2014
 glance_dbpass: 2014
+nova_dbpass: 2014
 
 keystone_admin_token: 546b336317a8ad6f2153
 
 admin_password: 2014
 demo_password: 2014
 glance_password: 2014
+nova_password: 2014
