--- a/playbooks/vars/secrets.yml
+++ b/playbooks/vars/secrets.yml
@@ -8,6 +8,7 @@ rabbitmq_password: 2014
 keystone_dbpass: 2014
 glance_dbpass: 2014
 nova_dbpass: 2014
+neutron_dbpass: 2014
 
 keystone_admin_token: 546b336317a8ad6f2153
 
@@ -15,3 +16,4 @@ admin_password: 2014
 demo_password: 2014
 glance_password: 2014
 nova_password: 2014
+neutron_password: 2014
