--- a/playbooks/setup-glance.yml
+++ b/playbooks/setup-glance.yml
@@ -8,6 +8,9 @@
 
   roles:
     - glance
+    - { role: supervisor, name: glance, programs: [
+      {name: glance-api, cmdline: "{{ virtualenv_dir }}/bin/glance-api"},
+      {name: glance-registry, cmdline: "{{ virtualenv_dir }}/bin/glance-registry"}]}
 
   vars_files:
     - vars/openstack.yml
