--- a/playbooks/install-openstack-clients.yml
+++ b/playbooks/install-openstack-clients.yml
@@ -1,12 +1,11 @@
 ---
 
-- hosts: controller
+- hosts: all
 
   tasks:
   - file: path={{ deploy_dir }} state=directory
 
-  - synchronize: src={{ source_dir }}/{{ item }} dest={{ deploy_dir }}
-    delegate_to: localhost
+  - synchronize: src={{ source_dir }}/{{ item }} dest={{ deploy_dir }} mode=push
     with_items: clients
 
 
